# Napier-Games-Engineering-Group-Project

./: .gitignore  CMakeLists.txt  README.md
code/: Cmp_Sprite.cpp  Cmp_Sprite.h  Cmp_actor_movement.cpp  Cmp_player_movement.cpp  Cmp_player_movement.h  ContactListener.cpp  ContactListener.h  InputManager.cpp  InputManager.h  System_Renderer.cpp  System_Renderer.h  game.h  main.cpp
code/components/: Cmp_Actor_Behaviour.cpp  Cmp_Actor_Behaviour.h  Cmp_Actor_Physics.cpp  Cmp_Actor_Physics.h  Cmp_NPC_Navigator.cpp  Cmp_NPC_Navigator.h  Cmp_Player_Physics.cpp  Cmp_Player_Physics.h  Cmp_Sprite.cpp  Cmp_Waypoint.cpp  Cmp_Waypoint.h  Cmp_actor_movement.cpp  Cmp_actor_movement.h  Cmp_player_movement.cpp
code/scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  SettingsScene.cpp  SettingsScene.h
install_wizard_files/: README HOW DO I MAKE AN INSTALLER.txt  inno_setup_script.iss  pre_install_info.txt
lib_JSON_reader/: SaveLoad_ReadWriter.cpp  SaveLoad_ReadWriter.h  TileMap_Importer.cpp  TileMap_Importer.h
lib_ecm/: Ecm.cpp  Ecm.h
lib_engine/: Audio.cpp  Audio.h  Engine.cpp  Engine.h  System_Physics.cpp  System_Physics.h  System_Renderer.cpp  System_Renderer.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h  TileMap.h
res/levels/: Test_Map.tiled-session  city.csv  city.tmx  demo.tmj  demo.tmx  rotation_test.tmj  test_large.tmx  test_large_embeddedTileset.tmj  test_tile_reading.tmx  test_tile_reading_embeddedTileset.tmj
res/player_settings/: player_settings.json
res/textures/: tilemap.tsx
